<resources>
    <string name="app_name">Mi Club</string>
    <string name="user_name">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Conectar</string>
    <string name="remeber_password">Recordar contraseña?</string>
    <string name="directivo">Directivo</string>
    <string name="control_panel">Panel de control</string>
    <string name="entrenado">Entrenador</string>
    <string name="atleta">Atleta</string>
    <string name="feed">Publicaciones</string>
    <string name="create">Crear</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="back">Volver</string>
    <string name="delete_element">Borrar</string>
    <string name="edit_element">Editar</string>
    <string name="titulo_ventana_eliminar">Eliminar Usuario</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_user">Eliminar usuario</string>
    <string name="message_delete_user">"¿Deseas eliminar a "</string>
    <string name="delete_user_title">Eliminar usuario.</string>
    <string name="cancel_action_delete_msg">Se ha cancelado la eliminacion</string>
    <string name="credenciales_invalidas">Credenciales inválidas</string>
    <string name="no_delete_user_loged">No se puede eliminar al usuario loggeado</string>
    <string name="edit_user_header">Editar Usuario</string>
    <string name="user_name_txt">Nombre</string>
    <string name="user_surname_txt">1er Apellido</string>
    <string name="user_second_surname_txt">2o Apellido</string>
    <string name="user_categori_txt">Categoria</string>
    <string name="user_phone">Teléfono</string>
    <string name="user_e_mail">Correo electronico.</string>
    <string name="user_weigth_txt">Peso</string>
    <string name="user_heigth_txt">Estatura</string>
    <string name="user_date_of_birth_txt">Fecha de nacimiento</string>
    <string name="debes_de_rellenar_los_campos">Debes de rellenar los campos</string>
    <string name="password_txt">Contraseña</string>
    <string name="show_password">Mostrar contraseña.</string>
    <string name="user_updated">Usuario actualizado correctamente.</string>
    <string name="fail_update_user">Fallo al actualizar usuario.</string>
    <string name="save_changes">Guardar</string>
    <string name="titulo_guardar_cambios">Guardar cambios</string>
    <string name="texto_guardar_cambios">¿Estas seguro de guardar los cambios?</string>
    <string name="cancel_changes">Se han cancelado los cambios</string>
    <string name="warning_changes">Debes realizar cambios para guardarlos.</string>
    <string name="null_user">No se ha encontrado el usuario</string>
    <string name="volver">Volver</string>
    <string name="inicio">Inicio</string>
    <string name="no_saved_changes_title">Cambios sin guardar</string>
    <string name="no_saved_changes_q">¿Cambios sin guardar estas seguro que deseas salir?</string>
    <string name="create_user">Crear</string>
    <string name="create_user_header">Crear</string>
    <string name="entrenador">Entrenador</string>
    <string name="error_route">Error al obtener ruta</string>
    <string name="user_created">Usuario creando con exito</string>
    <string name="fail_create_user">Fallo en la creacion del usuario</string>
    <string name="warnig">Aviso</string>
    <string name="create_user_warning_message">Debes rellenar los campos para generar un usuario</string>
    <string name="email_warnign_text">Tu email debe tener el siguiente formato aaaaaa@aaaa.com</string>
    <string name="create_user_warning_message_password">Tu contraseña debe tener al menos 8 caracteres</string>
    <string name="list_user_header">Lista de</string>
    <string name="create_date_warning_message">Por favor, introduce una fecha válida en el formato dd-MM-yyyy</string>
    <string name="user_date_of_birth_txt_formart">dd-MM-yyyy</string>
    <string name="entrenamientos">Entenamientos</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="perfil">Perfil</string>
    <string name="logout">Salir</string>
    <string name="acerca_de">Acerca de</string>
    <string name="about_us">Información de la App</string>
    <string name="about_us_message">Nombre: MyClapp;\nVersion: 0.0.1\nDeveloped by: Javier Lago Amoedo\nAño: 2024</string>
    <string name="exit">Log out</string>
    <string name="exit_message">¿Deseas salir de la cuenta?</string>
    <string name="error_msg_post">Error a la hora de recuperar los post</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="post">Post</string>
    <string name="create_post_header">Crear post</string>
    <string name="post_title">Titulo:</string>
    <string name="post_description">Descripción</string>
    <string name="save">Guardar</string>
    <string name="clean">Limpiar</string>
    <string name="error_empty_fields">Debes de rellenar todos los campos.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_training_header">Crear Entrenamiento</string>
    <string name="training">Entrenamiento.</string>
    <string name="add_exercise">Añadir Ejercicio</string>
    <string name="save_training">Guardar Entrenamiento</string>
    <string name="btn_add_exercise">Añadir Ejercicio</string>
    <string name="exercise">Ejercicio</string>
    <string name="post_name_exercise">Nombre del ejercicio:</string>
    <string name="post_units_type">Tipo de unidades</string>
    <string name="training_units_type">Metros,Rondas,Series</string>
    <string name="trianing_intensity">Intensidad</string>
    <string name="training_intensities">60%,Moderada,Zona 1 ....</string>
    <string name="training_series">Series</string>
    <string name="trianing_unit_number">Cantidad</string>
    <string name="empty_fields">Campos vacios</string>
    <string name="no_exercises">Debes añadire ejercicios para almacenar un entrenamiento.</string>
    <string name="no">no</string>
    <string name="clean_training">Quieres borrar todos los ejercicios del entrenamiento?</string>
    <string name="delete_exercise">¿Deseas eliminar este ejercicio?</string>
</resources>