<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_panel"
        style="@style/Butons_Style"
        android:padding="10dp"/>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <Button

                android:drawableTop="@drawable/perfil_directivo"
                android:id="@+id/btn_gestion_directivo"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:text="@string/directivo"
                android:layout_margin="10dp"
                style="@style/Butons_Style"
                />


            <Button
                android:drawableTop="@drawable/perfil_directivo"
                android:id="@+id/btn_gestion_entrenador"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:text="@string/entrenado"
                android:layout_margin="10dp"
                style="@style/Butons_Style"/>

            <Button
                android:drawableTop="@drawable/perfil_directivo"
                android:id="@+id/btn_gestion_atleta"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:text="@string/atleta"
                android:layout_margin="10dp"
                style="@style/Butons_Style"/>

            <Button
                android:drawableTop="@drawable/perfil_directivo"
                android:id="@+id/btn_publicar_muro"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:text="@string/feed"
                android:layout_margin="10dp"
                style="@style/Butons_Style"/>

        </GridLayout>


</LinearLayout>