<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portal"
    android:gravity="center"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:paddingBottom="0dp"
        android:background="@drawable/border_radius"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/escudo" />


        <EditText
            android:drawableStart="@drawable/user_icon"
            android:id="@+id/edit_text_user"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_radius_edit_text"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:padding="5dp"/>

        <EditText
            android:drawableStart="@drawable/lock_button"
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_radius_edit_text"
            android:hint="@string/password"
            android:textAlignment="center"
            android:padding="5dp"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/check_box_show_password_login"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:text="@string/show_password"

            />
        <Button
            android:id="@+id/btn_login"
            style="@style/Butons_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/log_in" />

        <CheckBox
            android:id="@+id/check_box_remeber_password"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/remeber_password"
            android:textAlignment="center" />


    </LinearLayout>

</LinearLayout>