<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:id="@+id/btn_about"
            style="@style/header_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/about_us_buttton"
            android:text="@string/acerca_de" />

        <ImageButton
            android:id="@+id/btn_profile"
            style="@style/header_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/person_edit"
            android:text="@string/perfil"
            />

        <ImageButton
            android:id="@+id/btn_log_out"
            style="@style/header_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/out_button"
            android:contentDescription="@string/logout"/>


    </LinearLayout>

</LinearLayout>